<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.quizapp.MainActivity">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_alignParentBottom="true"
            android:src="@drawable/jobs" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_1"
            android:text="@string/personal_info"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/title_size" />

            <com.example.android.quizapp.My_EditText
                android:id="@+id/name_value"
                style="style/Style_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name_value"
                android:inputType="textCapWords"
                android:maxLength="25"
                android:nextFocusRight="@+id/age_value"
                android:textSize="@dimen/text_size"/>

            <com.example.android.quizapp.My_EditText
                android:id="@+id/age_value"
                style="style/Style_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/age_value"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3"
                android:nextFocusDown="@+id/radiogroup_genre"
                android:textAlignment="center"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/genre"
                android:textSize="@dimen/title_size" />

            <RadioGroup
                android:id="@+id/radiogroup_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/genre_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:onClick="genre_type"
                    android:text="@string/genre_male"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/genre_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorSecondary"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:onClick="genre_type"
                    android:text="@string/genre_female"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/text_size" />
            </RadioGroup>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin_padding_2"
            android:layout_marginLeft="@dimen/margin_padding_1"
            android:layout_marginRight="@dimen/margin_padding_1"
            android:layout_marginTop="@dimen/margin_padding_2"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_1"
            android:text="@string/quiz_questions"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <LinearLayout style="@style/Style_question_linearlayout">

            <TextView
                android:id="@+id/textView"
                style="@style/Style_questionnumber"
                android:text="1. " />

            <TextView
                android:id="@+id/question1"
                style="@style/Style_questioncontent"
                android:text="@string/question1" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_padding_1"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkbox_qt1_1"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt1_1"
                    android:text="@string/question1_checkbox1_value" />

                <CheckBox
                    android:id="@+id/checkbox_qt1_2"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt1_2"
                    android:text="@string/question1_checkbox2_value" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkbox_qt1_3"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt1_3"
                    android:text="@string/question1_checkbox3_value" />

                <CheckBox
                    android:id="@+id/checkbox_qt1_4"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt1_4"
                    android:text="@string/question1_checkbox4_value" />
            </TableRow>
        </TableLayout>


        <LinearLayout style="@style/Style_question_linearlayout">

            <TextView
                style="@style/Style_questionnumber"
                android:text="2. " />

            <TextView
                android:id="@+id/question2"
                style="@style/Style_questioncontent"
                android:text="@string/question2" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_padding_1"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkbox_qt2_1"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt2_1"
                    android:text="@string/question2_checkbox1_value" />

                <CheckBox
                    android:id="@+id/checkbox_qt2_2"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt2_2"
                    android:text="@string/question2_checkbox2_value" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkbox_qt2_3"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt2_3"
                    android:text="@string/question2_checkbox3_value" />

                <CheckBox
                    android:id="@+id/checkbox_qt2_4"
                    style="@style/Style_checkbox"
                    android:onClick="checkbox_qt2_4"
                    android:text="@string/question2_checkbox4_value" />
            </TableRow>
        </TableLayout>

        <LinearLayout style="@style/Style_question_linearlayout">

            <TextView
                style="@style/Style_questionnumber"
                android:text="3. " />

            <TextView
                android:id="@+id/question_3"
                style="@style/Style_questioncontent"
                android:text="@string/question3" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroup_question3"
            style="@style/Style_radiogroup">

            <RadioButton
                android:id="@+id/radiobutton_qt3_1"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt3"
                android:text="@string/question3_radiobutton1_value" />

            <RadioButton
                android:id="@+id/radiobutton_qt3_2"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt3"
                android:text="@string/question3_radiobutton2_value" />

            <RadioButton
                android:id="@+id/radiobutton_qt3_3"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt3"
                android:text="@string/question3_radiobutton3_value" />
        </RadioGroup>

        <LinearLayout style="@style/Style_question_linearlayout">

            <TextView
                style="@style/Style_questionnumber"
                android:text="4. " />

            <TextView
                android:id="@+id/question_4"
                style="@style/Style_questioncontent"
                android:text="@string/question4" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroup_question4"
            style="@style/Style_radiogroup">

            <RadioButton
                android:id="@+id/radiobutton_qt4_1"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt4"
                android:text="@string/question4_radiobutton1_value" />

            <RadioButton
                android:id="@+id/radiobutton_qt4_2"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt4"
                android:text="@string/question4_radiobutton2_value" />

            <RadioButton
                android:id="@+id/radiobutton_qt4_3"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt4"
                android:text="@string/question4_radiobutton3_value" />
        </RadioGroup>

        <LinearLayout style="@style/Style_question_linearlayout">

            <TextView
                style="@style/Style_questionnumber"
                android:text="5. " />

            <TextView
                android:id="@+id/question_5"
                style="@style/Style_questioncontent"
                android:text="@string/question5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_1"
            android:orientation="horizontal">

            <com.example.android.quizapp.My_EditText
                android:id="@+id/edittext_qt5_1"
                style="style/Style_edittext"
                android:layout_width="@dimen/margin_padding_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name_value"
                android:inputType="textCapWords"
                android:maxLength="6"
                android:nextFocusDown="@+id/radiogroup_question6"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/textview_qt5_2"
                android:layout_width="@dimen/margin_padding_0"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout style="@style/Style_question_linearlayout">

            <TextView
                style="@style/Style_questionnumber"
                android:text="6. " />

            <TextView
                android:id="@+id/question_6"
                style="@style/Style_questioncontent"
                android:text="@string/question6" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroup_question6"
            style="@style/Style_radiogroup">

            <RadioButton
                android:id="@+id/radiobutton_qt6_1"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt6"
                android:text="@string/question6_radiobutton1_value" />

            <RadioButton
                android:id="@+id/radiobutton_qt6_2"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt6"
                android:text="@string/question6_radiobutton2_value" />

            <RadioButton
                android:id="@+id/radiobutton_qt6_3"
                style="@style/Style_radiobutton"
                android:onClick="radiobutton_qt6"
                android:text="@string/question6_radiobutton3_value" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_reset"
                style="@style/Style_button"
                android:onClick="reset_result"
                android:text="@string/reset" />

            <Button
                android:id="@+id/button_result"
                style="@style/Style_button"
                android:onClick="show_result"
                android:text="@string/result" />

            <Button
                android:id="@+id/button_submit"
                style="@style/Style_button"
                android:onClick="submitResult"
                android:text="@string/submit" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>